fix ScrollBar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -14,6 +14,10 @@
     .admin-content {
         width: 100%;
 
+        .admin-main {
+            height: calc(100vh - 50px);
+        }
+
         .admin-header {
             height: 40px;
 
